--- a/Tao Bot Maker/Tao Bot Maker.csproj
+++ b/Tao Bot Maker/Tao Bot Maker.csproj
@@ -99,12 +99,14 @@
     <Compile Include="Controller\MainFormController.cs" />
     <Compile Include="Controller\SequenceController.cs" />
     <Compile Include="Controller\HotkeyController.cs" />
+    <Compile Include="Controller\SettingsController.cs" />
     <Compile Include="Helpers\CoordinateHelper.cs" />
     <Compile Include="Helpers\ImageSearchHelper.cs" />
     <Compile Include="Helpers\KeyboardSimulator.cs" />
+    <Compile Include="Helpers\Logger.cs" />
     <Compile Include="Helpers\MouseSimulator.cs" />
     <Compile Include="Model\ActionConverter.cs" />
-    <Compile Include="Model\ActionTypes.cs" />
+    <Compile Include="Model\ActionType.cs" />
     <Compile Include="Import\DarkModeCS.cs" />
     <Compile Include="Import\FlatComboBox.cs">
       <SubType>Component</SubType>
@@ -124,6 +126,9 @@
     <Compile Include="Model\ISequenceRepository.cs" />
     <Compile Include="Model\Sequence.cs" />
     <Compile Include="Model\SequenceRepository.cs" />
+    <Compile Include="Model\Setting.cs" />
+    <Compile Include="Model\Settings.cs" />
+    <Compile Include="Model\SettingsType.cs" />
     <Compile Include="Properties\strings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -131,12 +136,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\IActionPropertiesPanel.cs" />
-    <Compile Include="View\AddActionForm.cs">
+    <Compile Include="View\Action\IActionPropertiesPanel.cs" />
+    <Compile Include="View\ActionForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\AddActionForm.Designer.cs">
-      <DependentUpon>AddActionForm.cs</DependentUpon>
+    <Compile Include="View\ActionForm.Designer.cs">
+      <DependentUpon>ActionForm.cs</DependentUpon>
     </Compile>
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
@@ -144,41 +149,66 @@
     <Compile Include="View\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\KeyActionPropertiesPanel.cs">
+    <Compile Include="View\Action\KeyActionPropertiesPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\KeyActionPropertiesPanel.Designer.cs">
+    <Compile Include="View\Action\KeyActionPropertiesPanel.Designer.cs">
       <DependentUpon>KeyActionPropertiesPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\SequenceActionPropertiesPanel.cs">
+    <Compile Include="View\Action\SequenceActionPropertiesPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\SequenceActionPropertiesPanel.Designer.cs">
+    <Compile Include="View\Action\SequenceActionPropertiesPanel.Designer.cs">
       <DependentUpon>SequenceActionPropertiesPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\ImageActionPropertiesPanel.cs">
+    <Compile Include="View\Action\ImageActionPropertiesPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\ImageActionPropertiesPanel.Designer.cs">
+    <Compile Include="View\Action\ImageActionPropertiesPanel.Designer.cs">
       <DependentUpon>ImageActionPropertiesPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\WaitActionPropertiesPanel.cs">
+    <Compile Include="View\SettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\SettingsForm.Designer.cs">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Action\WaitActionPropertiesPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\WaitActionPropertiesPanel.Designer.cs">
+    <Compile Include="View\Action\WaitActionPropertiesPanel.Designer.cs">
       <DependentUpon>WaitActionPropertiesPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\TextActionPropertiesPanel.cs">
+    <Compile Include="View\Action\TextActionPropertiesPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\TextActionPropertiesPanel.Designer.cs">
+    <Compile Include="View\Action\TextActionPropertiesPanel.Designer.cs">
       <DependentUpon>TextActionPropertiesPanel.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\MouseActionPropertiesPanel.cs">
+    <Compile Include="View\Action\MouseActionPropertiesPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="View\MouseActionPropertiesPanel.Designer.cs">
+    <Compile Include="View\Action\MouseActionPropertiesPanel.Designer.cs">
       <DependentUpon>MouseActionPropertiesPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Settings\ISettingsPropertiesPanel.cs" />
+    <Compile Include="View\Settings\OtherSettingsPropertiesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Settings\OtherSettingsPropertiesPanel.Designer.cs">
+      <DependentUpon>OtherSettingsPropertiesPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Settings\HotkeySettingsPropertiesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Settings\HotkeySettingsPropertiesPanel.Designer.cs">
+      <DependentUpon>HotkeySettingsPropertiesPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Settings\GeneralSettingsPropertiesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Settings\GeneralSettingsPropertiesPanel.Designer.cs">
+      <DependentUpon>GeneralSettingsPropertiesPanel.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\strings.fr.resx" />
     <EmbeddedResource Include="Properties\strings.resx">
@@ -195,29 +225,41 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="View\AddActionForm.resx">
-      <DependentUpon>AddActionForm.cs</DependentUpon>
+    <EmbeddedResource Include="View\ActionForm.resx">
+      <DependentUpon>ActionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\KeyActionPropertiesPanel.resx">
+    <EmbeddedResource Include="View\Action\KeyActionPropertiesPanel.resx">
       <DependentUpon>KeyActionPropertiesPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\SequenceActionPropertiesPanel.resx">
+    <EmbeddedResource Include="View\Action\SequenceActionPropertiesPanel.resx">
       <DependentUpon>SequenceActionPropertiesPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\ImageActionPropertiesPanel.resx">
+    <EmbeddedResource Include="View\Action\ImageActionPropertiesPanel.resx">
       <DependentUpon>ImageActionPropertiesPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\WaitActionPropertiesPanel.resx">
+    <EmbeddedResource Include="View\SettingsForm.resx">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Action\WaitActionPropertiesPanel.resx">
       <DependentUpon>WaitActionPropertiesPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\TextActionPropertiesPanel.resx">
+    <EmbeddedResource Include="View\Action\TextActionPropertiesPanel.resx">
       <DependentUpon>TextActionPropertiesPanel.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\MouseActionPropertiesPanel.resx">
+    <EmbeddedResource Include="View\Action\MouseActionPropertiesPanel.resx">
       <DependentUpon>MouseActionPropertiesPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Settings\OtherSettingsPropertiesPanel.resx">
+      <DependentUpon>OtherSettingsPropertiesPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Settings\HotkeySettingsPropertiesPanel.resx">
+      <DependentUpon>HotkeySettingsPropertiesPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Settings\GeneralSettingsPropertiesPanel.resx">
+      <DependentUpon>GeneralSettingsPropertiesPanel.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
